[tool.poetry]
name = "brain-games_DmGorokhov"
version = "0.1.0"
description = "Five short console-games for mental gymnastics"
authors = ["Dmitry Gorokhov <gorokhov86@gmail.com>"]
readme = "README.md"
packages = [ { include = "brain_games" } ]
classifiers = [
    "Topic :: Games"
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Enviroment :: console"
    "Intended Audience :: Customer service",
    "Natural language :: English"
]
repository = https://github.com/DmGorokhov/python-project-49.git


[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

